[gd_scene load_steps=3 format=3 uid="uid://doa18s6y75p7h"]

[ext_resource type="Script" uid="uid://b2oxr7coy8u2x" path="res://scenes/ui/menu/start_menu/start_menu.gd" id="1_oxq7e"]
[ext_resource type="Texture2D" uid="uid://cdjh5osw0sw8b" path="res://icon.svg" id="2_16vdi"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartMenu" type="CenterContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oxq7e")

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="StartMenu/VBoxContainer" groups=["Buttons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
focus_neighbor_top = NodePath("../QuitGameButton")
focus_neighbor_bottom = NodePath("../QuitGameButton")
focus_next = NodePath("../QuitGameButton")
focus_previous = NodePath("../QuitGameButton")
text = "Start Game"

[node name="ScoreBoardButton" type="Button" parent="StartMenu/VBoxContainer" groups=["Buttons"]]
unique_name_in_owner = true
layout_mode = 2
text = "Scoreboard"

[node name="QuitGameButton" type="Button" parent="StartMenu/VBoxContainer" groups=["Buttons"]]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
focus_neighbor_top = NodePath("../StartGameButton")
focus_neighbor_bottom = NodePath("../StartGameButton")
focus_next = NodePath("../StartGameButton")
focus_previous = NodePath("../StartGameButton")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 299.0
offset_top = 200.0
offset_right = 362.0
offset_bottom = 206.0
text = "Made with Godot"

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(372, 202)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_16vdi")

[connection signal="pressed" from="StartMenu/VBoxContainer/StartGameButton" to="StartMenu" method="_on_start_game_button_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/ScoreBoardButton" to="StartMenu" method="_on_score_board_button_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/QuitGameButton" to="StartMenu" method="_on_quit_game_button_pressed"]
